refactored dir structure into client and server

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taekwondo-app",
+  "name": "taekwondo-app-client",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "expo": "~54.0.20",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.6.0",
